# NCS-con

./: .gitignore  env_setup.sh  install.sh  readme.md
ros_ws/: readme.md
ros_ws/src/ncs_con/: CMakeLists.txt  package.xml
ros_ws/src/ncs_con/include/ncs_con/: coordinates.h  tracker.h
ros_ws/src/ncs_con/launch/: ncscon.launch
ros_ws/src/ncs_con/msg/: Con_msg.msg  Con_msg_2d.msg  Est_pose.msg  cam_msg.msg  cam_msg_2d.msg  obj_msg.msg  obj_msg_2d.msg
ros_ws/src/ncs_con/src/: coordinates.cpp  detect_markers.cpp  find_solution.cpp  ncs_con_node.py  record_markers.cpp  track.cpp  tracker.cpp
ros_ws/src/pose_est/: CMakeLists.txt  README.md  package.xml
ros_ws/src/pose_est/include/aruco/aruco/: cvdrawingutils.cpp  dictionary.cpp  marker.cpp  markerdetector.cpp
ros_ws/src/pose_est/include/pose_est/: aruco_serdes.h  cam_config.h  image_array_detector.h  initializer.h  multicam_mapper.h  pointcloud_drawer.h  sparselevmarq.h
ros_ws/src/pose_est/src/: CMakeLists.txt  aruco_serdes.cpp  cam_config.cpp  dataset.cpp  filesystem.cpp  image_array_detector.cpp  initializer.cpp  multicam_mapper.cpp  pointcloud_drawer.cpp
src/: recali.sh  stream_extraction.py
src/calibration/: calibration_extrinsic.py  calibration_intrinsic.py  readme.md
src/configs/: cali_640x480.default.yaml  server_config.default.yaml
